--- a/package.json
+++ b/package.json
@@ -1,28 +1,15 @@
 {
   "name": "stripe-payments-page",
-  "version": "1.0.0",
-  "description": "app that processes payments for products and services, using the Stripe API",
-  "main": "app.js",
-  "dependencies": {
-    "bootstrap-icons": "^1.4.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  },
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "nodemon app.js",
-    "server": "node app.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TGH37/stripe-payments-page.git"
-  },
-  "author": "Tom Hayton",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/TGH37/stripe-payments-page/issues"
-  },
-  "homepage": "https://github.com/TGH37/stripe-payments-page#readme"
+  "dependencies": {
+    "next": "10.0.8",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
+  }
 }
