--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.13.2",
     "next": "10.0.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "stripe": "^8.141.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
